[tool.poetry]
name = "python-technology"
version = "0.1.0"
description = ""
authors = ["mkrakovsky <michal.krakovsky@blindspot.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
